Fix: fix css to make Doodle works on mobile

--- a/app/javascript/flavours/glitch/styles/components/doodle.scss
+++ b/app/javascript/flavours/glitch/styles/components/doodle.scss
@@ -8,12 +8,17 @@ $doodle-background: #d9e1e8;
   background: $doodle-background;
   text-align: center;
   line-height: 0; // remove weird gap under canvas
+  overflow: auto;
+
   canvas {
     border: 5px solid $doodle-background;
   }
 }
 
 .doodle-modal__action-bar {
+  flex-wrap: wrap;
+  flex: 0 0 auto;
+
   .filler {
     flex-grow: 1;
     margin: 0;
